Bug 176116 - Crash after cleaning the trash
Summary: Crash after cleaning the trash
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.10.90
Platform: Compiled Sources Unspecified
: NOR crash
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-11-26 10:41 UTC by András Manţia
Modified: 2008-11-28 17:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2008-11-26 10:41:42 UTC
Version:            (using Devel)
Installed from:    Compiled sources

I started to empty the trash (15000 mails), it took some time, and after a while kmail crashed.
Application: Kontact (kontact), signal SIGABRT
[?1034h[Thread debugging using libthread_db enabled]
0x00007fa32e185261 in nanosleep () from /lib64/libc.so.6
[Current thread is 0 (LWP 18207)]

Thread 2 (Thread 0x423f3950 (LWP 18224)):
#0  0x00007fa32e1af662 in select () from /lib64/libc.so.6
#1  0x00007fa32eef9176 in ?? () from /usr/lib64/libQtCore.so.4
#2  0x00007fa32ee30102 in ?? () from /usr/lib64/libQtCore.so.4
#3  0x00007fa32ebbc040 in start_thread () from /lib64/libpthread.so.0
#4  0x00007fa32e1b60cd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fa335cc0700 (LWP 18207)):
[KCrash Handler]
#5  0x00007fa32e1155c5 in raise () from /lib64/libc.so.6
#6  0x00007fa32e116bb3 in abort () from /lib64/libc.so.6
#7  0x00007fa32ee28455 in qt_message_output () from /usr/lib64/libQtCore.so.4
#8  0x00007fa32ee2859d in qFatal () from /usr/lib64/libQtCore.so.4
#9  0x00007fa32ee2860a in qt_assert () from /usr/lib64/libQtCore.so.4
#10 0x00007fa31c8b711a in KMail::MessageListView::Core::Model::clearOrphanChildrenHash (this=0x18f8040) at /data/development/sources/kde-trunk/kdepim/kmail/messagelistview/core/model.cpp:974
#11 0x00007fa31c8c39a2 in KMail::MessageListView::Core::Model::setStorageModel (this=0x18f8040, storageModel=0x4557120, preSelectionMode=KMail::MessageListView::Core::PreSelectLastSelected)
    at /data/development/sources/kde-trunk/kdepim/kmail/messagelistview/core/model.cpp:588
#12 0x00007fa31c8ea331 in KMail::MessageListView::Core::View::setStorageModel (this=0x18eda00, storageModel=0x471f, preSelectionMode=6)
    at /data/development/sources/kde-trunk/kdepim/kmail/messagelistview/core/view.cpp:155
#13 0x00007fa31c8f3657 in KMail::MessageListView::Core::Widget::setStorageModel (this=0x18e84d0, storageModel=0x4557120, preSelectionMode=KMail::MessageListView::Core::PreSelectLastSelected)
    at /data/development/sources/kde-trunk/kdepim/kmail/messagelistview/core/widgetbase.cpp:275
#14 0x00007fa31c898c97 in KMail::MessageListView::Widget::setFolder (this=0x18e84d0, fld=0xdd5350, icon=<value optimized out>, preSelectionMode=KMail::MessageListView::Core::PreSelectLastSelected)
    at /data/development/sources/kde-trunk/kdepim/kmail/messagelistview/widget.cpp:110
#15 0x00007fa31c8923a7 in KMail::MessageListView::Pane::setCurrentFolder (this=0x18d5990, fld=0xdd5350, preferEmptyTab=false, preSelectionMode=KMail::MessageListView::Core::PreSelectLastSelected)
    at /data/development/sources/kde-trunk/kdepim/kmail/messagelistview/pane.cpp:206
#16 0x00007fa31c765165 in KMMainWidget::folderSelected (this=0x18e9610, aFolder=0xdd5350, forceJumpToUnread=false, preferNewTabForOpening=6)
    at /data/development/sources/kde-trunk/kdepim/kmail/kmmainwidget.cpp:3064
#17 0x00007fa31c767851 in KMMainWidget::qt_metacall (this=0x18e9610, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3dd1e3a0)
    at /data/development/build/kde-trunk/kdepim/kmail/kmmainwidget.moc:510
#18 0x00007fa32ef2db3a in QMetaObject::activate () from /usr/lib64/libQtCore.so.4
#19 0x00007fa31c4f5ac0 in KMail::FolderViewManager::folderActivated (this=0x471f, _t1=0xdd5350, _t2=false) at /data/development/build/kde-trunk/kdepim/kmail/folderview.moc:87
#20 0x00007fa31c5006b8 in KMail::FolderView::activateItemInternal (this=0xa97050, fvi=0x1c41770, keepSelection=false, notifyManager=true, middleButton=255)
    at /data/development/sources/kde-trunk/kdepim/kmail/folderview.cpp:998
#21 0x00007fa31c50111a in KMail::FolderView::qt_metacall (this=0xa97050, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3dd1e550)
    at /data/development/build/kde-trunk/kdepim/kmail/folderview.moc:201
#22 0x00007fa31c504a46 in KMail::MainFolderView::qt_metacall (this=0x471f, _c=18207, _id=6, _a=0xffffffffffffffff) at /data/development/build/kde-trunk/kdepim/kmail/mainfolderview.moc:63
#23 0x00007fa32ef2db3a in QMetaObject::activate () from /usr/lib64/libQtCore.so.4
#24 0x00007fa3301cbba0 in QTreeWidget::itemClicked () from /usr/lib64/libQtGui.so.4
#25 0x00007fa3301d7c03 in QTreeWidget::qt_metacall () from /usr/lib64/libQtGui.so.4
#26 0x00007fa33469c1a5 in KPIM::TreeWidget::qt_metacall (this=0x471f, _c=18207, _id=6, _a=0xffffffffffffffff) at /data/development/build/kde-trunk/kdepim/libkdepim/moc_treewidget.cpp:67
#27 0x00007fa33469c255 in KPIM::FolderTreeWidget::qt_metacall (this=0x471f, _c=18207, _id=6, _a=0xffffffffffffffff) at /data/development/build/kde-trunk/kdepim/libkdepim/moc_foldertreewidget.cpp:63
#28 0x00007fa31c500f85 in KMail::FolderView::qt_metacall (this=0x471f, _c=18207, _id=6, _a=0xffffffffffffffff) at /data/development/build/kde-trunk/kdepim/kmail/folderview.moc:183
#29 0x00007fa31c504a46 in KMail::MainFolderView::qt_metacall (this=0x471f, _c=18207, _id=6, _a=0xffffffffffffffff) at /data/development/build/kde-trunk/kdepim/kmail/mainfolderview.moc:63
#30 0x00007fa32ef2db3a in QMetaObject::activate () from /usr/lib64/libQtCore.so.4
#31 0x00007fa330156405 in QAbstractItemView::clicked () from /usr/lib64/libQtGui.so.4
#32 0x00007fa33016301e in QAbstractItemView::mouseReleaseEvent () from /usr/lib64/libQtGui.so.4
#33 0x00007fa32fd3e4c1 in QWidget::event () from /usr/lib64/libQtGui.so.4
#34 0x00007fa33016559d in QAbstractItemView::viewportEvent () from /usr/lib64/libQtGui.so.4
#35 0x00007fa330199d00 in QTreeView::viewportEvent () from /usr/lib64/libQtGui.so.4
#36 0x00007fa32ef189e8 in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib64/libQtCore.so.4
#37 0x00007fa32fcebc4c in QApplicationPrivate::notify_helper () from /usr/lib64/libQtGui.so.4
#38 0x00007fa32fcf42aa in QApplication::notify () from /usr/lib64/libQtGui.so.4
#39 0x00007fa330ae2cfb in KApplication::notify (this=0x7fff3dd203d0, receiver=0x1997d80, event=0x7fff3dd1f470) at /data/development/sources/kde-trunk/kdelibs/kdeui/kernel/kapplication.cpp:307
#40 0x00007fa32ef19731 in QCoreApplication::notifyInternal () from /usr/lib64/libQtCore.so.4
#41 0x00007fa32fcf3648 in QApplicationPrivate::sendMouseEvent () from /usr/lib64/libQtGui.so.4
#42 0x00007fa32fd57e99 in ?? () from /usr/lib64/libQtGui.so.4
#43 0x00007fa32fd568b7 in QApplication::x11ProcessEvent () from /usr/lib64/libQtGui.so.4
#44 0x00007fa32fd7d18c in ?? () from /usr/lib64/libQtGui.so.4
#45 0x00007fa329edd93a in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#46 0x00007fa329ee1040 in ?? () from /usr/lib64/libglib-2.0.so.0
#47 0x00007fa329ee11dc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#48 0x00007fa32ef41c6f in QEventDispatcherGlib::processEvents () from /usr/lib64/libQtCore.so.4
#49 0x00007fa32fd7c8ff in ?? () from /usr/lib64/libQtGui.so.4
#50 0x00007fa32ef18022 in QEventLoop::processEvents () from /usr/lib64/libQtCore.so.4
#51 0x00007fa32ef181ad in QEventLoop::exec () from /usr/lib64/libQtCore.so.4
#52 0x00007fa32ef1a6ad in QCoreApplication::exec () from /usr/lib64/libQtCore.so.4
#53 0x0000000000404a81 in main (argc=1, argv=0x7fff3dd209a8) at /data/development/sources/kde-trunk/kdepim/kontact/src/main.cpp:218
Comment 1 Szymon Stefanek 2008-11-27 23:48:05 UTC
Yep, I can reproduce it here. Will fix soon :)
Comment 2 Szymon Stefanek 2008-11-28 17:15:46 UTC
SVN commit 890231 by stefanek:

Fix the algorithm that removes items from the view. Don't crash
when the folder is changed while the async algorithm is stil in progress.
We should be able to empty large trashcans again :D

BUG: 176116




 M  +48 -28    model.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=890231