Fix the algorithm that removes items from the view. Don't crash when the folder is changed while the async algorithm is stil in progress. We should be able to empty large trashcans again :D

BUG: 176116



svn path=/trunk/KDE/kdepim/; revision=890231